# OTUS_HW9

./: .gitignore  CMakeLists.txt  async.cpp  async.hpp  bulk-139898677880384-1703346135692932A  bulk-139898677880384-1703346135705185A  bulk-139898677880384-1703346135710533A  handler.cpp  handler.hpp  main.cpp  ts_queue.h
.github/workflows/: cmake-single-platform.yml
examples/: CMakeLists.txt  main.cpp
inc/: Bulk.h  CmdInterpreter.h  CmdProcessContext.h  CmdProcessor.h  ConsoleWriter.h  FileWriter.h  IObservable.h  IStreamWriter.h  ThreadPool.h  async.h
src/: Bulk.cpp  CMakeLists.txt  CmdInterpreter.cpp  CmdProcessContext.cpp  CmdProcessor.cpp  ConsoleWriter.cpp  FileWriter.cpp  async.cpp  ver.cpp
test/: CMakeLists.txt  test_main.cpp
